--- a/front-end/gapsi/src/pages/Main/main.css
+++ b/front-end/gapsi/src/pages/Main/main.css
@@ -6,14 +6,14 @@
     left: 0;
     top:0;
 }
-#subcontainer{
+#sub-container{
     position: absolute;
-    top: 25%;
+    top: 5%;
     left: 40%;
 }
 .card-content{
     padding-top: 20px;
-    height: 300px;
+    height: 100px;
     display: flex;
     flex-direction: column;
 }
@@ -21,7 +21,7 @@
     margin-left: 6%;
     margin-right: auto;
     width: 200px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 .label-card{
     text-align: center;
